--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ body {
 }
 
 .image-area {
-  max-height: 470px;
+  max-height: 100%;
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
